--- a/Applications/Actions/Client.ipynb
+++ b/Applications/Actions/Client.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import rospy\n",
+    "import time\n",
     "from __future__ import print_function\n",
-    "import actionlib\n",
-    "import actionlib_tutorials.msg"
+    "from actionlib import SimpleActionClient\n",
+    "from actionlib_tutorials.msg import FibonacciAction, FibonacciGoal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,80 +32,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "client = actionlib.SimpleActionClient('fibonacci', \n",
-    "                                      actionlib_tutorials.msg.FibonacciAction)\n",
+    "client = SimpleActionClient('fibonacci', FibonacciAction)\n",
     "client.wait_for_server()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal = actionlib_tutorials.msg.FibonacciGoal(order=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "goal = FibonacciGoal(order=5)\n",
     "client.send_goal(goal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "client.wait_for_result()"
+    "client.wait_for_result()\n",
+    "result = client.get_result()\n",
+    "print('[Result]    State: %d' % client.get_state())\n",
+    "print('[Result]   Status: %s' % client.get_goal_status_text())\n",
+    "print('[Result] Sequence:', result.sequence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processing feedback"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result: 0, 1, 1, 2, 3, 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def feedback_cb(feedback):\n",
+    "    print(\"[Feedback] Sequence:\", feedback.sequence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal = FibonacciGoal(order=5)\n",
+    "client.send_goal(goal, feedback_cb=feedback_cb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.wait_for_result()\n",
     "result = client.get_result()\n",
-    "print(\"Result:\", ', '.join([str(n) for n in result.sequence]))"
+    "print('[Result]    State: %d' % client.get_state())\n",
+    "print('[Result]   Status: %s' % client.get_goal_status_text())\n",
+    "print('[Result] Sequence:', result.sequence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cancelling a request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal = FibonacciGoal(order=5)\n",
+    "client.send_goal(goal)\n",
+    "time.sleep(1.5)\n",
+    "client.cancel_goal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.wait_for_result()\n",
+    "result = client.get_result()\n",
+    "print('[Result]    State: %d' % client.get_state())\n",
+    "print('[Result]   Status: %s' % client.get_goal_status_text())\n",
+    "print('[Result] Sequence:', result.sequence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preempting a previous goal\n",
+    "\n",
+    "The `SimpleActionServer` implements a single goal policy: accepting a new goal implies successful preemption of any old goal and the status of the old goal will be changed automatically to reflect this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal = FibonacciGoal(order=5)\n",
+    "client.send_goal(goal)\n",
+    "time.sleep(1.5)\n",
+    "new_goal = FibonacciGoal(order=8)\n",
+    "client.send_goal(new_goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.wait_for_result()\n",
+    "result = client.get_result()\n",
+    "print('[Result]    State: %d' % client.get_state())\n",
+    "print('[Result]   Status: %s' % client.get_goal_status_text())\n",
+    "print('[Result] Sequence:', result.sequence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Action aborted by server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal = FibonacciGoal(order=105)\n",
+    "client.send_goal(goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.wait_for_result()\n",
+    "result = client.get_result()\n",
+    "print('[Result]    State: %d' % client.get_state())\n",
+    "print('[Result]   Status: %s' % client.get_goal_status_text())\n",
+    "print('[Result] Sequence:', result.sequence)"
    ]
   },
   {
