--- a/Applications/Actions/Server.ipynb
+++ b/Applications/Actions/Server.ipynb
@@ -20,8 +20,8 @@
    "source": [
     "import rospy\n",
     "from actionlib import SimpleActionServer\n",
-    "from actionlib_tutorials.msg import FibonacciFeedback, FibonacciResult, \\\n",
-    "    FibonacciAction"
+    "from actionlib_tutorials.msg import FibonacciAction, \\\n",
+    "    FibonacciFeedback, FibonacciResult"
    ]
   },
   {
@@ -37,7 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "action_name = 'fibonacci'\n",
     "feedback = FibonacciFeedback()\n",
     "result = FibonacciResult()"
    ]
@@ -46,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the name of the action, and the objects for storing the feedback and result data."
+    "These are the objects for storing the feedback and result data."
    ]
   },
   {
@@ -58,17 +57,15 @@
     "def execute_cb(goal):\n",
     "    r = rospy.Rate(1)\n",
     "    success = True\n",
-    "    feedback.sequence = []\n",
-    "    feedback.sequence.append(0)\n",
-    "    feedback.sequence.append(1)\n",
+    "    feedback.sequence = [0, 1]\n",
     "    if goal.order > 100:\n",
     "        result.sequence = feedback.sequence\n",
-    "        rospy.loginfo('%s: Aborted' % action_name)\n",
+    "        print('Aborted')\n",
     "        action_server.set_aborted(result, \"Sequence aborted due to excessive order\")\n",
     "        return\n",
     "    \n",
-    "    rospy.loginfo('%s: Executing, creating fibonacci sequence of order %i with seeds %i, %i' % \n",
-    "                  (action_name, goal.order, feedback.sequence[0], feedback.sequence[1]))\n",
+    "    print('Executing, creating fibonacci sequence of order %i with seeds %i, %i' % \n",
+    "                  (goal.order, feedback.sequence[0], feedback.sequence[1]))\n",
     "    for i in range(1, goal.order):\n",
     "            if not action_server.is_preempt_requested():\n",
     "                feedback.sequence.append(feedback.sequence[i] + feedback.sequence[i-1])\n",
@@ -77,7 +74,7 @@
     "\n",
     "    if not action_server.is_preempt_requested():\n",
     "        result.sequence = feedback.sequence\n",
-    "        rospy.loginfo('%s: Succeeded' % action_name)\n",
+    "        print('Succeeded')\n",
     "        action_server.set_succeeded(result, \"Sequence completed successfully\")"
    ]
   },
@@ -87,9 +84,7 @@
    "source": [
     "This is the execute callback function that we'll run everytime a new goal is received.\n",
     "\n",
-    "An important component of an action server is the ability to allow an action client to request that the goal under execution be canceled. When a client requests that the current goal be preempted, the action server should cancel the goal, perform any necessary cleanup, and call the `set_preempted` function, which signals that the action has been preempted by user request. Here, we'll check if we've been preempted every second. We could, alternatively, receive a callback when a preempt request is received.\n",
-    "\n",
-    "The Fibonacci sequence is put into the feedback variable and then published on the feedback channel provided by the action server. Then, the action continues looping and publishing feedback.\n",
+    "If the action is not preempted, the Fibonacci sequence is put into the feedback variable and then published on the feedback channel provided by the action server. Then, the action continues looping and publishing feedback.\n",
     "\n",
     "Once the action has finished computing the Fibonacci sequence, the action server notifies the action client that the goal is complete by calling `set_succeeded`."
    ]
@@ -102,9 +97,16 @@
    "source": [
     "def preempt_cb():\n",
     "    result.sequence = feedback.sequence\n",
-    "    rospy.loginfo('%s: Preempted' % action_name)\n",
+    "    print('Preempted')\n",
     "    action_server.set_preempted(result, \"Sequence preempted\")\n",
     "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An important component of an action server is the ability to allow an action client to request that the goal under execution be canceled. When a client requests that the current goal be preempted, the action server should cancel the goal, perform any necessary cleanup, and call the `set_preempted` function, which signals that the action has been preempted by user request. Here, we execute this callback when a preempt request is received."
    ]
   },
   {
@@ -113,8 +115,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "action_server = SimpleActionServer(action_name, FibonacciAction, \n",
+    "rospy.init_node('fibonacci_server')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The server node is initialized."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "action_server = SimpleActionServer('fibonacci', FibonacciAction, \n",
     "                    execute_cb = execute_cb, auto_start = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the `SimpleActionServer` is created, we pass it a name, the action type, and the execute callback. Since we've specified an execute callback in this example, a thread will be spun for us which allows us to take long running actions in a callback received when a new goal comes in.\n",
+    "\n",
+    "Note you should always set `auto_start` to `False` explicitly."
    ]
   },
   {
@@ -127,12 +154,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The preempt callback function is registered."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rospy.init_node('fibonacci')\n",
     "action_server.start()\n",
     "rospy.spin()"
    ]
@@ -141,7 +174,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Writing a Simple Action Client](Client.ipynb)."
+    "Finally, we start the action server and spin the node."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please move now to the right tab of the workspace for [Writing a Simple Action Client](Client.ipynb)."
    ]
   }
  ],
