set turtle2 pen to red

--- a/Transform/Programming/Move_Turtle.ipynb
+++ b/Transform/Programming/Move_Turtle.ipynb
@@ -6,8 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rosservice call /turtle2/set_pen 255 0 0 2 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rostopic pub --once /turtle1/cmd_vel geometry_msgs/Twist \\\n",
-    "'{linear:  {x: 2.5, y: 0.0, z: 0.0}, angular: {x: 0.0,y: 0.0,z: -1.8}}'"
+    "'{linear:  {x: 5, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: -3.6}}'"
    ]
   },
   {
