--- a/README.ipynb
+++ b/README.ipynb
@@ -19,6 +19,22 @@
     "* [Introduction to tf](Transform/Intro/index.ipynb)\n",
     "* [Broadcaster and Listener in Python](Transform/Programming/index.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "This work, \"Interactive Tutorials for ROS-Industrial\", is a derivative of \"[ROS Tutorials](http://wiki.ros.org/ROS/Tutorials)\" by the [Open Source Robotics Foundation](http://www.osrfoundation.org/), used under [CC BY](https://creativecommons.org/licenses/by/3.0/), and \"[ROS-Industrial Training Material](http://ros-industrial.github.io/industrial_training/index.html)\" by the [ROS-Industrial Consortium](http://rosindustrial.org/ric), used under an [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Interactive Tutorials for ROS-Industrial\" is licensed under an [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0) by the [Robotic Intelligence Lab](http://robinlab.uji.es) of [Jaume-I University (Castelló, Spain)](http://www.uji.es)."
+   ]
   }
  ],
  "metadata": {
