add reset simulator

--- a/Concepts/Fundamentals/reset.ipynb
+++ b/Concepts/Fundamentals/reset.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### turtlesim\n",
-    "\n",
-    "So now we can run the `turtlesim_node` in the `turtlesim` package (the program runs headlessly so it needs a virtual framebuffer)."
+    "## Reset the simulator\n",
+    "In case that no turtle appears in the simulator, please use this command for resetting it:"
    ]
   },
   {
@@ -15,15 +14,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xvfb-run -e /dev/stdout --server-args='-screen 0 1024x768x24 -ac' \\\n",
-    "rosrun turtlesim turtlesim_node"
+    "rosservice call /reset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You need to run [this notebook](turtleview.ipynb) for viewing the simulator output."
+    "You can reset the simulation several times until a turtle is shown."
    ]
   }
  ],
