--- a/Concepts/Fundamentals/turtleview.ipynb
+++ b/Concepts/Fundamentals/turtleview.ipynb
@@ -31,6 +31,13 @@
    "source": [
     "NOTE: each time, the turtle may look different. Don't worry about it - there are [many types of turtle](http://wiki.ros.org/Distributions#Current_Distribution_Releases) and yours is a surprise!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No turtle shown? We are working on this bug, in the meantime you may try to [reset the simulation](reset.ipynb)."
+   ]
   }
  ],
  "metadata": {
