--- a/Transform/Programming/turtlesim.ipynb
+++ b/Transform/Programming/turtlesim.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xvfb-run --server-args='-screen 0 1024x768x24 -ac' \\\n",
+    "xvfb-run -e /dev/stdout --server-args='-screen 0 1024x768x24 -ac' \\\n",
     "rosrun turtlesim turtlesim_node"
    ]
   },
