--- a/README.ipynb
+++ b/README.ipynb
@@ -35,6 +35,19 @@
    "source": [
     "\"Interactive Tutorials for ROS-Industrial\" is licensed under an [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0) by the [Robotic Intelligence Lab](http://robinlab.uji.es) of [Jaume-I University (Castelló, Spain)](http://www.uji.es)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "<a href=\"http://rosin-project.eu\"><img style=\"margin: 0px 20px; float: left\" src=\"img/Logo_ROSIN.png\"></a>\n",
+    "This work is funded by [ROSIN Education Projects](http://rosin-project.eu/eps),\n",
+    "which has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 732287. The opinions expressed on this website reflect only the author's view, and in no way the European Commission's opinions.\n",
+    "\n",
+    "The European Commission is not responsible for any use that may be made of the information it contains."
+   ]
   }
  ],
  "metadata": {
