--- a/Concepts/Fundamentals/Nodes.ipynb
+++ b/Concepts/Fundamentals/Nodes.ipynb
@@ -6,9 +6,15 @@
    "source": [
     "## Understanding ROS Nodes\n",
     "\n",
-    "This tutorial introduces ROS graph concepts and discusses the use of `roscore`, `rosnode`, and `rosrun` commandline tools.\n",
+    "This tutorial is based on the [ROS Wiki tutorial on understanding nodes](http://wiki.ros.org/ROS/Tutorials/UnderstandingNodes).\n",
+    "It introduces the ROS graph concepts and discusses the use of `roscore`, `rosnode`, and `rosrun` commandline tools.\n",
     "\n",
-    "Source: [ROS Wiki](http://wiki.ros.org/ROS/Tutorials/UnderstandingNodes)"
+    "In this workspace there are three notebooks:\n",
+    "* The main tutorial (this one)\n",
+    "* roscore (right side, top)\n",
+    "* turtlesim (right side, bottom)\n",
+    "\n",
+    "Below in this notebook you will find the instructions for setting up all the parts, please follow carefully the instructions."
    ]
   },
   {
