--- a/Concepts/Fundamentals/Services.ipynb
+++ b/Concepts/Fundamentals/Services.ipynb
@@ -122,6 +122,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Warning**: sometimes the new turtle is not visible; you can simply try to create a new one until it appears, and use the name of that turtle instead of \"turtle2\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now, you may go back to the [Topics tab](Topics.ipynb) and publish velocities on each turtle's topic: `/turtle1/cmd_vel` or `/turtle2/cmv_vel`."
    ]
   },
@@ -129,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try other available services, e.g. chaning the turtle pen color. First, let's look at the service arguments:"
+    "Let's try other available services, e.g. changing the turtle pen color. First, let's look at the service arguments:"
    ]
   },
   {
@@ -154,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rosservice call /turtle2/set_pen 0 255 0 5 0"
+    "rosservice call /turtle1/set_pen 0 255 0 5 0"
    ]
   },
   {
