--- a/Concepts/Fundamentals/Topics.ipynb
+++ b/Concepts/Fundamentals/Topics.ipynb
@@ -25,6 +25,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You should see three nodes: `rosout`, `turtlesim`, and `turtlesim_display`. If not, use the notebooks on the right side for starting the processes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Introducing `rostopic`\n",
     "The `rostopic` tool allows you to get information about ROS **topics**.\n",
     "\n",
@@ -127,16 +134,16 @@
    "outputs": [],
    "source": [
     "rostopic pub -1 /turtle1/cmd_vel geometry_msgs/Twist -- \\\n",
-    "'[2.0, 0.0, 0.0]' '[0.0, 0.0, -1.8]'"
+    "'[2.0, 0.0, 0.0]' '[0.0, 0.0, 1.8]'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The previous command will send a single message to turtlesim telling it to move with an linear velocity of 2.0, and an angular velocity of 1.8 .\n",
+    "The previous command will send a single message to turtlesim telling it to move with a linear velocity of 2.0, and an angular velocity of 1.8 .\n",
     "\n",
-    "This is a pretty complicated example, so lets look at each argument in detail.\n",
+    "This is a pretty complicated example, so let's look at each argument in detail.\n",
     "\n",
     "* This command will publish messages to a given topic:  \n",
     "    `rostopic pub`\n",
