--- a/Concepts/Topics/Publisher.ipynb
+++ b/Concepts/Topics/Publisher.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Topics: Publisher and Subscriber in Python\n",
+    "In this workspace, there are three notebooks:\n",
+    "* Publisher (this one)\n",
+    "* Subscriber (right side)\n",
+    "* roscore (bottom)\n",
+    "\n",
+    "Please follow the instructions in this notebook: you will be advised to switch to the other notebooks when necessary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The Publisher Node\n",
     "\"Node\" is the ROS term for an executable that is connected to the ROS network. Here we'll create the publisher (\"talker\") node which will  broadcast a message. But first, make sure that [roscore](./roscore.ipynb) is running in the bottom tab of this workspace."
    ]
@@ -135,7 +148,9 @@
     "\n",
     "When you run the talker, messages will be displayed in the subscriber window.\n",
     "\n",
-    "After a while, you may now stop the talker loop by pressing the `Interrupt` button of this notebook and publish a single message with the commands:"
+    "After a while, you may stop the talker loop by pressing the `Interrupt` button of this notebook.\n",
+    "\n",
+    "Finally, let's publish a single message with the commands:"
    ]
   },
   {
