--- a/Concepts/Topics/Subscriber.ipynb
+++ b/Concepts/Topics/Subscriber.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final addition, `rospy.spin()` simply keeps your node from exiting until the node has been shutdown. Unlike `roscpp`, `rospy.spin()` does not affect the subscriber callback functions, as those have their own threads.\n",
+    "The final addition, `rospy.spin()` simply keeps your node from exiting until the node has been shutdown. `rospy.spin()` does not affect the subscriber callback functions, as those have their own threads.\n",
     "\n",
     "Please go back to the [Publisher Node](Publisher.ipynb) for starting to send messages."
    ]
