--- a/Concepts/Fundamentals/Parameters.ipynb
+++ b/Concepts/Fundamentals/Parameters.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`rosparam` allows you to store and manipulate data on the ROS [Parameter Server](http://wiki.ros.org/Parameter%20Server). The Parameter Server can store integers, floats, boolean, dictionaries, and lists. `rosparam` uses the YAML markup language for syntax. In simple cases, YAML looks very natural: `1` is an integer, `1.0` is a float, `one` is a string, `true` is a boolean, `[1, 2, 3]` is a list of integers, and `{a: b, c: d}` is a dictionary. `rosparam` has many commands that can be used on parameters, as shown below:"
+    "`rosparam` allows us to store and manipulate data on the ROS [Parameter Server](http://wiki.ros.org/Parameter%20Server). The Parameter Server can store integers, floats, boolean, dictionaries, and lists. `rosparam` uses the YAML markup language for syntax. In simple cases, YAML looks very natural: `1` is an integer, `1.0` is a float, `one` is a string, `true` is a boolean, `[1, 2, 3]` is a list of integers, and `{a: b, c: d}` is a dictionary. `rosparam` has many commands that can be used on parameters, as shown below:"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at what parameters are currently on the param server:"
+    "Let's look at what parameters are currently on the Parameter Server:"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "You have completed this tutorial, congratulations!\n",
     "\n",
-    "Please close the `roscore` and `turtlesim` tabs, then click the link below.\n",
+    "Please close all the `roscore` and `turtlesim` tabs in the right side of the browser, then click the link below.\n",
     "\n",
     "[Go back to main page](../../README.ipynb)"
    ]
